# metodos-tp2

./: .gitignore  CMakeLists.txt  README.md
matrices/: correlacion_pca_100.txt  correlacion_tdpca_10.txt  covarianza_2dpca.txt  covarianza_pca_100.txt  covarianza_tdpca_10.txt  diagonal.txt
matrices/tests/: conocida.txt  sdp.txt  triangular.txt
resultados/: 2dpca_autovalores_menos_una.csv  2dpca_autovectores_menos_una.csv  PCA_autovalores_menos_una.csv  covarianza.txt  covarianza_2dpca_eigenValues.csv  covarianza_2dpca_eigenVectors.csv  covarianza_eigenValues.csv  diagonal_eigenValues.csv  diagonal_eigenVectors.csv
resultados/ejercicio_4/: 2dpca_10  2dpca_20  2dpca_30  2dpca_40  pca_10  pca_20  pca_30  pca_40  pca_50
src/cpp/: Eigenpair.cpp  Eigenpair.h  IO.cpp  IO.h  Matrix.cpp  Matrix.h  Tests.cpp  Tests.h  main.cpp
src/python/: IO.py  config.py  ejecutar.py  imagenes.py  main.py  plotter.py  utilidad.py  utils.py
